--- a/style.css
+++ b/style.css
@@ -37,9 +37,12 @@ a:hover {
 }
 
 .logo {
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
+  height: auto;
   margin-bottom: 10px;
 }
+
 
 .hero h1 {
   font-size: 0.1em;
@@ -163,6 +166,7 @@ footer {
   color: #FFD07B; /* Ámbar suave */
   text-decoration: none;
   transition: color 0.3s ease;
+  position: relative;
 }
 
 .social-links a i {
