--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ section h2 {
   box-shadow: 0 8px 20px rgba(255, 208, 123, 0.6); /* Ámbar suave sombra */
 }
 
-.project-card img {
+.project-card img,iframe {
   width: 100%;
   height: 275px;
   object-fit: cover;
